updates to nav bar links and some copy tweaks (done from the airport)

--- a/styles.css
+++ b/styles.css
@@ -572,6 +572,15 @@ body::before {
     padding-top: 2rem;
 }
 
+
+/* MASTERY PROGRAM */
+
+
+
+
+
+
+
 /* Footer */
 .footer {
     padding: 4rem 2rem 2rem;
